翻墙服务器搭建

--- a/source/_posts/如何建设高可用系统.md
+++ b/source/_posts/如何建设高可用系统.md
@@ -88,7 +88,9 @@ date: 2018-05-11 14:12:00
 
 在集群环境中，可自动识别高性能服务，拒绝调用性能低的服务。如在集群环境中，对调用超时的服务器进行权重降低，优先调用权重高的服务器。
 
-#### 依赖简化- 减少系统之间的依赖，比如使用消息驱动，A和B系统通过消息服务器传递数据，A和B系统使用数据库进行读写分离，A系统负责往数据库中写数据，B系统负责读数据，因为数据存放在数据库中，当A不可用时，短时间内不影响B系统提供服务。
+#### 依赖简化
+
+减少系统之间的依赖，比如使用消息驱动，A和B系统通过消息服务器传递数据，A和B系统使用数据库进行读写分离，A系统负责往数据库中写数据，B系统负责读数据，因为数据存放在数据库中，当A不可用时，短时间内不影响B系统提供服务。
 
 #### 弹性扩容
 
