翻墙服务器搭建

--- a/source/_posts/数据基础 - 线性回归之最小二乘法.md
+++ b/source/_posts/数据基础 - 线性回归之最小二乘法.md
@@ -12,8 +12,8 @@ date: 2018-05-15 23:12:00
 场景：研究一个区域的警察密度对犯罪率的影响？
 
 假设：
- - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;a_{i}" title="\LARGE a_{i}" /> 表示第 `i` 个区域的警察数
- - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;b_{i}" title="\LARGE b_{i}" /> 表示第 `i` 个区域的犯罪率
+ - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;a_{1}&space;a_{2}&space;a_{3}&space;a_{i}&space;a_{n}" title="\LARGE a_{i}" /> 表示第 `i` 个区域的警察数
+ - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;b_{1}&space;b_{2}&space;b_{3}&space;b_{i}&space;b_{n}" title="\LARGE b_{i}" /> 表示第 `i` 个区域的犯罪率
 
 我们通过调研得到 `n` 个数据集合：(a1,b1) , (a2,b2) , (a3,b3) , (an,bn)
 将它们标记在笛卡尔坐标上，可以得到下面图片
