--- a/source/_posts/数据基础 - 线性回归之最小二乘法.md
+++ b/source/_posts/数据基础 - 线性回归之最小二乘法.md
@@ -11,9 +11,9 @@ date: 2018-05-15 23:12:00
 ## 场景
 场景：研究一个区域的警察密度对犯罪率的影响？
 
-假设：
- - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;a_{1}&space;a_{2}&space;a_{3}&space;a_{i}&space;a_{n}" title="\LARGE a_{i}" /> 表示第 `i` 个区域的警察数
- - 变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;b_{1}&space;b_{2}&space;b_{3}&space;b_{i}&space;b_{n}" title="\LARGE b_{i}" /> 表示第 `i` 个区域的犯罪率
+假设
+变量：<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;a_{1}&space;a_{2}&space;a_{3}&space;a_{i}&space;a_{n}" title="\LARGE a_{i}" /> 表示第 `i` 个区域的警察数
+变量:<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;b_{1}&space;b_{2}&space;b_{3}&space;b_{i}&space;b_{n}" title="\LARGE b_{i}" /> 表示第 `i` 个区域的犯罪率
 
 我们通过调研得到 `n` 个数据集合：(a1,b1) , (a2,b2) , (a3,b3) , (an,bn)
 将它们标记在笛卡尔坐标上，可以得到下面图片
@@ -45,12 +45,17 @@ date: 2018-05-15 23:12:00
 ![screen](/images/screen_33.png)
 
 假设一元二次方程为：
-
 <img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;y&space;=&space;ax^{2}&space;&plus;&space;bx&space;&plus;&space;c" title="\LARGE y = ax^{2} + bx + c" />
 
 那么它的对称轴为：
-
 <img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;x&space;=&space;-&space;b/2a" title="\LARGE x = - b/2a" />
+
+对于上述方程：
+<img src="http://latex.codecogs.com/gif.latex?\dpi{80}&space;\LARGE&space;S=&space;\sum_{i=1}^{n}&space;(ka_{i}&space;&plus;&space;c&space;-b_{i})^{2}" title="\LARGE S= \sum_{i=1}^{n} (ka_{i} + c -b_{i})^{2}" />
+
+解得：
+k = <img src="http://latex.codecogs.com/gif.latex?\dpi{100}&space;k&space;=&space;\frac{\sum_{i=0}^{n}&space;a_{i}^2&space;\sum_{i=0}^{n}&space;b_{i}&space;-&space;\sum_{i=0}^{n}&space;a_{i}&space;\sum_{i=0}^{n}&space;a_{i}b_{i}}{n&space;\sum_{i=0}^{n}&space;a_{i}^{2}&space;-(&space;\sum_{i=0}^{n}&space;a_{i})^{2}}" title="k = \frac{\sum_{i=0}^{n} a_{i}^2 \sum_{i=0}^{n} b_{i} - \sum_{i=0}^{n} a_{i} \sum_{i=0}^{n} a_{i}b_{i}}{n \sum_{i=0}^{n} a_{i}^{2} -( \sum_{i=0}^{n} a_{i})^{2}}" />
+b = <img src="http://latex.codecogs.com/gif.latex?\dpi{100}&space;b&space;=&space;\frac{\sum_{i=0}^{n}&space;a_{i}b_{i}&space;-&space;\sum_{i=0}^{n}&space;a_{i}&space;\sum_{i=0}^{n}&space;a_{i}}{n&space;\sum_{i=0}^{n}&space;a_{i}^{2}&space;-(&space;\sum_{i=0}^{n}&space;a_{i})^{2}}" title="b = \frac{\sum_{i=0}^{n} a_{i}b_{i} - \sum_{i=0}^{n} a_{i} \sum_{i=0}^{n} a_{i}}{n \sum_{i=0}^{n} a_{i}^{2} -( \sum_{i=0}^{n} a_{i})^{2}}" /> 
 
 
 
