数据基础 - 线性回归之最小二乘法.md

--- a/source/_posts/数据基础 - 线性回归之最小二乘法.md
+++ b/source/_posts/数据基础 - 线性回归之最小二乘法.md
@@ -55,7 +55,7 @@ date: 2018-05-15 23:12:00
 
 解得：
 k = <img src="http://latex.codecogs.com/gif.latex?\dpi{100}&space;k&space;=&space;\frac{\sum_{i=0}^{n}&space;a_{i}^2&space;\sum_{i=0}^{n}&space;b_{i}&space;-&space;\sum_{i=0}^{n}&space;a_{i}&space;\sum_{i=0}^{n}&space;a_{i}b_{i}}{n&space;\sum_{i=0}^{n}&space;a_{i}^{2}&space;-(&space;\sum_{i=0}^{n}&space;a_{i})^{2}}" title="k = \frac{\sum_{i=0}^{n} a_{i}^2 \sum_{i=0}^{n} b_{i} - \sum_{i=0}^{n} a_{i} \sum_{i=0}^{n} a_{i}b_{i}}{n \sum_{i=0}^{n} a_{i}^{2} -( \sum_{i=0}^{n} a_{i})^{2}}" />
-b = <img src="http://latex.codecogs.com/gif.latex?\dpi{100}&space;b&space;=&space;\frac{\sum_{i=0}^{n}&space;a_{i}b_{i}&space;-&space;\sum_{i=0}^{n}&space;a_{i}&space;\sum_{i=0}^{n}&space;a_{i}}{n&space;\sum_{i=0}^{n}&space;a_{i}^{2}&space;-(&space;\sum_{i=0}^{n}&space;a_{i})^{2}}" title="b = \frac{\sum_{i=0}^{n} a_{i}b_{i} - \sum_{i=0}^{n} a_{i} \sum_{i=0}^{n} a_{i}}{n \sum_{i=0}^{n} a_{i}^{2} -( \sum_{i=0}^{n} a_{i})^{2}}" /> 
+c = <img src="http://latex.codecogs.com/gif.latex?\dpi{100}&space;c&space;=&space;\frac{\sum_{i=0}^{n}&space;a_{i}b_{i}&space;-&space;\sum_{i=0}^{n}&space;a_{i}&space;\sum_{i=0}^{n}&space;a_{i}}{n&space;\sum_{i=0}^{n}&space;a_{i}^{2}&space;-(&space;\sum_{i=0}^{n}&space;a_{i})^{2}}" title="b = \frac{\sum_{i=0}^{n} a_{i}b_{i} - \sum_{i=0}^{n} a_{i} \sum_{i=0}^{n} a_{i}}{n \sum_{i=0}^{n} a_{i}^{2} -( \sum_{i=0}^{n} a_{i})^{2}}" /> 
 
 
 
