--- a/source/_posts/聊聊跨域问题.md
+++ b/source/_posts/聊聊跨域问题.md
@@ -13,7 +13,7 @@ date: 2018-06-23 15:12:00
 
 https://www.helingfeng.com/2018/04/02/Web%E6%B5%8F%E8%A7%88%E5%99%A8%E5%90%8C%E6%BA%90%E6%94%BF%E7%AD%96%E5%8F%8A%E5%85%B6%E8%A7%84%E9%81%BF%E6%96%B9%E6%B3%95/
 
-## 问题1: 跨域时，需要携带 `Cookies`
+## 问题1：跨域时，需要携带 `Cookies`
 
 解决办法：对于`ajax`异步请求，需要添加参数 `withCredentials: true` 
 
