--- a/source/_posts/12306-余票查询.md
+++ b/source/_posts/12306-余票查询.md
@@ -1,8 +1,10 @@
+---
 title: 12306 余票查询
 author: helingfeng
 tags: []
 categories:
   - 公共API
+translate_title: 12306-tickets-inquiry
 date: 2018-04-02 15:12:00
 ---
 ## 12306 余票查询
