--- a/source/_posts/数学建模基本理论.md
+++ b/source/_posts/数学建模基本理论.md
@@ -1,3 +1,4 @@
+---
 title: 数据建模-基本理论
 author: helingfeng
 tags:
@@ -7,6 +8,7 @@ categories:
   - 算法
   - 数学
   - 建模
+translate_title: data-modeling-basic-theory
 date: 2018-05-01 21:57:00
 ---
 
