--- a/source/_posts/生活最大的敌人是“自己”.md
+++ b/source/_posts/生活最大的敌人是“自己”.md
@@ -1,7 +1,9 @@
+---
 title: 生活最大的敌人是“自己”
 author: helingfeng
 tags: []
 categories: []
+translate_title: the-biggest-enemy-of-life-is-self
 date: 2018-04-08 21:11:00
 ---
 时间是我们最宝贵的财富，但是在这个信息爆炸的互联网时代时，太多的诱惑分散了我们的注意力，我们往往会深陷其中，无法自拔。做为九零后，在一座陌生的城市里打拼，我们很迷茫，我们也愚昧。因为我们和其他人一样，拥有时间财富，拥有年轻的资本，却不知不觉的沉陷，沉沦。
