--- a/source/_posts/登录验证分析（12306网站）.md
+++ b/source/_posts/登录验证分析（12306网站）.md
@@ -1,8 +1,10 @@
+---
 title: 12306  验证登录
 author: helingfeng
 tags: []
 categories:
   - 公共API
+translate_title: 12306-verification-login
 date: 2018-04-02 11:20:00
 ---
 #### 12306 验证登录
