--- a/source/_posts/聊聊跨域问题.md
+++ b/source/_posts/聊聊跨域问题.md
@@ -1,8 +1,10 @@
+---
 title: 聊聊跨域问题
 author: helingfeng
 tags: []
 categories:
   - JavaScript
+translate_title: talk-about-crossdomain-issues
 date: 2018-06-23 15:12:00
 ---
 ## 什么是跨域
