--- a/source/_posts/入门正则表达式.md
+++ b/source/_posts/入门正则表达式.md
@@ -1,7 +1,9 @@
+---
 title: 入门正则表达式
 author: John Doe
 tags: []
 categories: []
+translate_title: entry-regular-expression
 date: 2018-04-02 17:34:00
 ---
 #### 正则表达式规则
