--- a/source/_posts/数据基础 - 线性代数 第一章.md
+++ b/source/_posts/数据基础 - 线性代数 第一章.md
@@ -1,3 +1,4 @@
+---
 title: 数据基础 - 线性代数 第一章
 author: helingfeng
 tags:
@@ -6,6 +7,7 @@ tags:
 categories:
   - 数学基础
   - 线性代数
+translate_title: data-foundation-linear-algebra-chapter-one
 date: 2018-05-01 22:12:00
 ---
 ## 前言
