--- a/source/_posts/数据基础 - 线性回归之最小二乘法.md
+++ b/source/_posts/数据基础 - 线性回归之最小二乘法.md
@@ -1,3 +1,4 @@
+---
 title: 数据基础 - 线性回归之最小二乘法
 author: helingfeng
 tags:
@@ -6,6 +7,7 @@ tags:
 categories:
   - 数学基础
   - 最小二乘法
+translate_title: data-foundation-least-squares-method-of-linear-regression
 date: 2018-05-01 23:12:00
 ---
 ## 场景
