--- a/source/_posts/程序员进阶读书推荐.md
+++ b/source/_posts/程序员进阶读书推荐.md
@@ -1,9 +1,11 @@
+---
 title: 程序员进阶读书推荐
 author: helingfeng
 tags:
   - 读书
 categories:
   - 书籍
+translate_title: programmer-advanced-reading-recommended
 date: 2018-04-08 21:22:00
 ---
 ### 求知若渴 stay hungry,stay foolish
