--- a/source/_posts/程序设计基础概念集合.md
+++ b/source/_posts/程序设计基础概念集合.md
@@ -1,8 +1,10 @@
+---
 title: 设计原则集合与使用频率
 author: helingfeng
 tags: []
 categories:
   - 设计模式
+translate_title: design-principles-and-frequency-of-use
 date: 2018-04-02 15:38:00
 ---
 | 设计原则名称  | 定  义  | 使用频率  |
