--- a/source/_posts/请允我许你一世温柔.md
+++ b/source/_posts/请允我许你一世温柔.md
@@ -1,9 +1,11 @@
+---
 title: 请允我许你一世温柔
 author: helingfeng
 tags:
   - 诗歌
 categories:
   - 诗歌
+translate_title: please-let-me-promise-you-a-gentle-life
 date: 2018-04-04 10:12:00
 ---
 思念在笔尖流转
