--- a/source/_posts/大数据挖掘比赛总结.md
+++ b/source/_posts/大数据挖掘比赛总结.md
@@ -1,5 +1,5 @@
 ---
-title: 大数据比赛总结
+title: 大数据比赛
 author: helingfeng
 tags: []
 categories:
@@ -7,7 +7,7 @@ categories:
   - 数据挖掘
 date: 2018-09-04 15:12:00
 ---
-## 大数据比赛总结
+## 大数据比赛
 
 ### 比赛日程
 
@@ -19,11 +19,3 @@ date: 2018-09-04 15:12:00
 - 第六天，模型训练，并调优参数，拟合数学模型得出应用模型，并对应用模型进行R平方与F验证；
 - 第七天，内容梳理，准备汇报PPT与演示DEMO程序；
 - 第八天，成果汇报与应用展示，听取评委意见，参加颁奖与比赛结束合影；
-
-### 心得总结
-
-进入职场以来，第一次出差，第一次在一个陌生的地方待上七天。有幸参加这次比赛，也是感谢集团感谢公司给予的机会。可以说这次比赛，是大数据挖掘的应用比赛。
-第一步，我们得熟练大数据平台的操作，懂得如何运用操作数据的工具，并掌握一定的大数据平台的编程。创意是火苗，数据是燃料。没有数据的大数据处理得出来的结论
-都是空想，没有创意的数据分析，只能说是数据统计。但也不是贬低数据统计，数据统计是很重要的，它是创意的开始，挖掘的依据。
-
-集团为本次比赛搭建大数据处理 Spark 平台，采用10台 16 核 64G 的物理机。
