--- a/source/_posts/程序员常用英文词汇-金融相关.md
+++ b/source/_posts/程序员常用英文词汇-金融相关.md
@@ -5,6 +5,7 @@ tags: []
 categories:
   - 英文
   - 金融
+translate_title: common-english-words-for-programmers-auto-finance
 date: 2018-04-02 15:12:00
 ---
 
