--- a/source/_posts/12306-余票查询.md
+++ b/source/_posts/12306-余票查询.md
@@ -4,7 +4,7 @@ author: helingfeng
 tags: []
 categories:
   - 公共API
-translate_title: 12306-tickets-inquiry
+translate_title: '12306'
 date: 2018-04-02 15:12:00
 ---
 ## 12306 余票查询
