--- a/source/_posts/登录验证分析（12306网站）.md
+++ b/source/_posts/登录验证分析（12306网站）.md
@@ -4,7 +4,7 @@ author: helingfeng
 tags: []
 categories:
   - 公共API
-translate_title: 12306-verification-login
+translate_title: 12306-verify-login
 date: 2018-04-02 11:20:00
 ---
 #### 12306 验证登录
