--- a/source/_posts/频繁项数据挖掘.md
+++ b/source/_posts/频繁项数据挖掘.md
@@ -4,7 +4,7 @@ author: helingfeng
 tags: []
 categories:
   - 算法
-translate_title: frequent-data-mining
+translate_title: frequent-item-data-mining
 date: 2018-04-02 16:46:00
 ---
 ### 时代的变迁
