--- a/source/_posts/12306-余票查询.md
+++ b/source/_posts/12306-余票查询.md
@@ -1,9 +1,10 @@
 ---
 title: 12306 余票查询
 author: helingfeng
-tags: []
+tags: 
+  - 12306
 categories:
-  - 公共API
+  - 爬虫
 translate_title: '12306'
 date: 2018-04-02 15:12:00
 ---
