--- a/source/_posts/大数据挖掘比赛总结.md
+++ b/source/_posts/大数据挖掘比赛总结.md
@@ -1,9 +1,10 @@
 ---
 title: 大数据比赛
 author: helingfeng
-tags: []
-categories:
+tags:
   - 大数据
+  - 数据挖掘
+categories:
   - 数据挖掘
 translate_title: big-data-contest
 date: 2018-09-04 15:12:00
